# musicdl

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
src/musicdl/: __init__.py  __main__.py  api.py  cli.py  config.py  downloader.py  exceptions.py  filesystem.py  main.py  metadata.py  models.py  naming.py  organizer.py  util.py
tests/: test_api.py
