[project]
name = "musicdl"
version = "0.1.0"
description = "A Tidal track downloader, indentified using their track ID. "
readme = "README.md"
authors = [
    { name = "arlecchino", email = "miscellaneous2020@outlook.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "validators>=0.35.0",
]

[project.scripts]
musicdl = "musicdl.main:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
